# jarvis-log-client

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run-tests.sh
.github/workflows/: test.yml
jarvis_log_client/: __init__.py  client.py  handlers.py
tests/: test_client.py  test_handlers.py
